force-app/main/default/objects/GfOrderItem__c/GfOrderItem__c.object-meta.xml
<CustomObject>
    <label>주문서 상세</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>