force-app/main/default/objects/GfOrderItem__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>GfOrder__c</referenceTo>
    <relationshipLabel>Gf Order Item</relationshipLabel>
    <relationshipName>Gf_Order_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>