force-app/main/default/objects/GfOrderItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Gf Order Item</relationshipLabel>
    <relationshipName>Gf_Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>