force-app/main/default/objects/GfOrderItem__c/fields/RuTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>RuTotalPrice__c</fullName>
    <formula>Quantity__c * UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>